--- a/blog/package.json
+++ b/blog/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.11.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
